lyricue (1:3.4.5-1) precise; urgency=medium

    * Add option to expand items on adding to playlist (default=don't expand)

 -- Chris Debenham <chris@adebenham.com>  Mon, 2 Apr 2012 17:30:00 +1000

lyricue (1:3.4.4-1) precise; urgency=medium

    * Remove need for JsonBuilder (libglib-json 0.12.0 not available on lucid)

 -- Chris Debenham <chris@adebenham.com>  Wed, 28 Mar 2012 17:30:00 +1000

lyricue (1:3.4.3-1) precise; urgency=medium

    * Add ability to do SQL queries via lyricue_display and return results
      as JSON-formatted string
    * Preferences dialog - Handle if no bibles installed (LP#966272)
    * Handle not having default bible better in display portion (LP#963284)

 -- Chris Debenham <chris@adebenham.com>  Mon, 19 Mar 2012 17:30:00 +1000

lyricue (1:3.4.2-1) precise; urgency=low

    * Fix moving items past top/bottom of playlist/sublist/song
    * Add "Save Song as New" option when editing a song
    * Fix table headers when printing songlist (LP#883368)

 -- Chris Debenham <chris@adebenham.com>  Mon, 19 Mar 2012 17:30:00 +1000

lyricue (1:3.4.1-1) precise; urgency=low

    * Fix font colour preference changing
    * Fix import songlist menu item (LP#953603)
    * Fix import of utf8 ccli songs (LP#956770)

 -- Chris Debenham <chris@adebenham.com>  Sat, 17 Mar 2012 17:30:00 +1000

lyricue (1:3.4.0-1) precise; urgency=low

    * Pressing Enter on bible navigator adds verse to playlist (LP#946787)

 -- Chris Debenham <chris@adebenham.com>  Fri, 2 Mar 2012 17:30:00 +1000

lyricue (1:3.4.0-1) precise; urgency=low

  * Change from glade to gtkbuilder for interface
  * Make playlist items be expanded by default when added to playlist or
    opening a new playlist
  * Add ability to copy a playlist
  * Allow installing to paths other than /usr

 -- Chris Debenham <chris@adebenham.com>  Fri, 2 Mar 2012 17:30:00 +1000

lyricue (1:3.3.6-1) maverick; urgency=low

  * Add xrandr and Xorg.log to bug report collection