@@ -1,6 +1,7 @@
 lyricue (1:3.4.5-1) precise; urgency=medium
 
-    * Add option to expand items on adding to playlist (default=don't expand)
+    * Add option to expand items on adding to playlist (LP#970411)
+    * Fix going back a page when looping is not set (LP#970591)
 
  -- Chris Debenham <chris@adebenham.com>  Mon, 2 Apr 2012 17:30:00 +1000
 
